# RampageSDK

./: CMakeLists.txt  CMakePresets.json  README.md  setup.py
cmake/: config.cmake  func.cmake
cmake/util/: const_var.py
docs/: BEV_POOL_V1_DESIGN.md  FRAME.md  OP_ADD.md  OP_SAMPLE.md  QA.md
include/csrc/: functions.h
include/ge/: utils.h
kernels/: CMakeLists.txt
kernels/op_host/: unique_v2.cpp  unique_v2_tiling.h  unique_v3.cpp  unique_v3_tiling.h
kernels/op_kernel/: unique_v2.cpp  unique_v2.h  unique_v3.cpp  unique_v3.h  unique_v3_counts.h  unique_v3_inverse.h
kernels_arch35/: CMakeLists.txt
kernels_arch35/op_host/: add_custom.cpp  add_custom_tiling.h  add_relu.cpp  add_relu_tiling.h  bev_pool_v1.cpp  bev_pool_v1_tiling.h
kernels_arch35/op_kernel/: add_custom.cpp  add_relu.cpp  bev_pool_v1.cpp
models/: README.md
rampage/: __init__.py  get_chip_info.py
rampage/csrc/: AddCustom.cpp  CMakeLists.txt  Unique.cpp  pybind.cpp
rampage/ops/: npu_add_custom.py  npu_bev_pool_v1.py  npu_unique.py
test/: TEST_DOC.md  bev_pool_v1_quick_test.py
test/op_test/: test_npu_add_custom.py  test_npu_bev_pool_v1.py  test_npu_unique.py
